--- a/notice.html
+++ b/notice.html
@@ -31,6 +31,9 @@ uiCode2: '공지 및 업데이트'
           <tr class="space"></tr>
         </tbody>
       </table>
+
+
+
       <div class="pagination">
         <button class="prev">이전</button>
         <a href="#" class="current">1</a>
@@ -41,3 +44,35 @@ uiCode2: '공지 및 업데이트'
         <button class="next">다음</button>
       </div>
     </div>
+
+    
+
+<!-- This loops through the paginated posts -->
+{% for post in paginator.posts %}
+  <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+  <p class="author">
+    <span class="date">{{ post.date }}</span>
+  </p>
+  <div class="content">
+    {{ post.content }}
+  </div>
+{% endfor %}
+
+<!-- Pagination links -->
+<div class="pagination">
+  {% if paginator.previous_page %}
+    <a href="{{ paginator.previous_page_path }}" class="previous">
+      Previous
+    </a>
+  {% else %}
+    <span class="previous">Previous</span>
+  {% endif %}
+  <span class="page_number ">
+    Page: {{ paginator.page }} of {{ paginator.total_pages }}
+  </span>
+  {% if paginator.next_page %}
+    <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+  {% else %}
+    <span class="next ">Next</span>
+  {% endif %}
+</div>
